Added Front page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,22 @@
 <div class="col-lg-12">
 	<h1 class="page-header">Welcome to FlashCard24</h1>
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			Where am I ?
+		</div>
+		<div class="panel-body">
+			FlashCard24 is a tool to test yourself about your skills in another language, just like real <a href="http://en.wikipedia.org/wiki/Flashcard">flashcards</a>. <br/>
+			it's an open source project under development, so feel free to participate to <a href="https://github.com/Projet24/flashcard">our Git Hub</a>.
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			How to start ?
+		</div>
+		<div class="panel-body">
+			First, you can create a <a href="#/newcard">new flash card</a>, choose a name, and put some words and their translation in another language. <br/>
+			Then, we will give you a flash card id so that you can use it to train yourself in <a href="#/testcard">the training room</a> or share it with your friends.
+		</div>
+	</div>
 </div>
