--- a/templates/newcard.html
+++ b/templates/newcard.html
@@ -1,3 +1,45 @@
 <div class="col-lg-12">
 	<h1 class="page-header">Create a new flash card</h1>
+
+	<form class="form-horizontal">
+		<div class="form-group">
+			<label for="email" class="col-lg-2 control-label">Name</label>
+			<div class="col-lg-10">
+				<input type="text" class="form-control" id="email" placeholder="Choose a name">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="word_1" class="col-lg-2 control-label">Word 1</label>
+			<div class="col-lg-5">
+				<input type="text" class="form-control col-sm-5" id="word_1" placeholder="Word">
+			</div>
+			<div class="col-lg-5">
+				<input type="text" class="form-control col-sm-5" id="trans_1" placeholder="Translation">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="word_2" class="col-lg-2 control-label">Word 2</label>
+			<div class="col-lg-5">
+				<input type="text" class="form-control col-sm-5" id="word_2" placeholder="Word">
+			</div>
+			<div class="col-lg-5">
+				<input type="text" class="form-control col-sm-5" id="word_2" placeholder="Translation">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="word_3" class="col-lg-2 control-label">Word 3</label>
+			<div class="col-lg-5">
+				<input type="text" class="form-control col-sm-5" id="word_3" placeholder="Word">
+			</div>
+			<div class="col-lg-5">
+				<input type="text" class="form-control col-sm-5" id="word_3" placeholder="Translation">
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+			<button type="submit" class="btn btn-default">Save</button>
+			</div>
+		</div>
+	</form>
 </div>
